style: cleanup of code style issues...
- c style array to java style array
- correct modifier sorting
- use standard charset constants to define charset encoding
- unnecessary toString calls
- unnecessary null checks before calling Object.equals()
- unnecessary conversion to String
- unnecessary enum modifiers
- unnecessary interface modifiers
- unnecessary semicolon