@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -63,7 +64,7 @@ public class DavContext {
 
     // extension that gets called at the end of every requests.
     public interface Extension {
-        public void callback(DavContext ctxt);
+        void callback(DavContext ctxt);
     }
 
     private static HashSet<Extension> sExtensions;
@@ -112,7 +113,7 @@ public class DavContext {
     private boolean mOverwrite;
     private boolean mBrief;
 
-    private enum RequestType { PRINCIPAL, RESOURCE };
+    private enum RequestType { PRINCIPAL, RESOURCE }
 
     /* List of properties in the PROPFIND or PROPPATCH request. */
     public static class RequestProp {
@@ -273,9 +274,9 @@ public class DavContext {
         mOpCtxt.setUserAgent(req.getHeader("User-Agent"));
         mDavCompliance = DavProtocol.getDefaultComplianceString();
         String overwrite = mReq.getHeader(DavProtocol.HEADER_OVERWRITE);
-        mOverwrite = (overwrite != null && overwrite.equals("F")) ? false : true;
+        mOverwrite = ("F".equals(overwrite)) ? false : true;
         String brief = mReq.getHeader(DavProtocol.HEADER_BRIEF);
-        mBrief = (brief != null && brief.equals("t")) ? true : false;
+        mBrief = ("t".equals(brief)) ? true : false;
     }
 
     /* Returns HttpServletRequest object containing the current DAV request. */
@@ -550,7 +551,7 @@ public class DavContext {
         return userAgentHeaderContains(MSIE) || userAgentHeaderContains(MOZILLA);
     }
 
-    public static enum KnownUserAgent {
+    public enum KnownUserAgent {
         iCal, iPhone, Evolution;
 
         static KnownUserAgent lookup(String userAgent) {
@@ -682,11 +683,7 @@ public class DavContext {
             end--;
         begin = dest.lastIndexOf("/", end-1);
         String newName = dest.substring(begin+1, end);
-        try {
-            newName = URLDecoder.decode(newName, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            ZimbraLog.dav.warn("can't decode URL ", dest, e);
-        }
+        newName = URLDecoder.decode(newName, StandardCharsets.UTF_8);
         if (oldName.equals(newName) == false)
             return newName;
         else
